# ros-netft

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  netft_hardware_plugins.xml  package.xml  pixi.toml  pytest.ini  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  labeler.yml  release-drafter.yml  release.yml
.superpowers/sdd/: task-14-fix-report.md
config/: netft_ros1.yaml  netft_ros2.yaml  netft_ros2_control.yaml
docs/: architecture.md
include/netft_driver/: adapter_config.hpp  client.hpp  protocol.hpp  ros2_control_compat.hpp  status.hpp  types.hpp
launch/: netft.launch  netft.launch.py  netft_ros2_control.launch.py
netft_driver/: check.py  client.py  node_common.py  protocol.py  ros1_node.py  ros2_node.py  status.py
scripts/: netft_check  netft_node
src/: check_main.cpp  client.cpp  netft_hardware_interface.cpp  protocol.cpp  ros1_node.cpp  ros2_node.cpp  status.cpp
src/compat/: xml_config.cpp
src/core/: UPSTREAM
src/core/include/netft/: client.hpp  discovery.hpp  export.hpp  status.hpp  types.hpp
src/core/src/: client.cpp  discovery.cpp  status.cpp  types.cpp
src/core/src/detail/: client_impl.cpp  client_impl.hpp  fault_latch.cpp  fault_latch.hpp  posix_transport.cpp  posix_transport.hpp  protocol.cpp  protocol.hpp  sequence.cpp  sequence.hpp  xml_config.cpp  xml_config.hpp
src/ros/: adapter_config.hpp  diagnostics.cpp  diagnostics.hpp  ros2_control_compat.hpp  ros2_control_test_access.hpp  unit_conversion.cpp  unit_conversion.hpp
test/: test_check.py  test_client.py  test_config_validation.py  test_entrypoint.py  test_fake_sensor.py  test_gitignore.py  test_junit_validator.py  test_launch_validation.py  test_manifest.py  test_node_common.py  test_protocol.py  test_release_readiness.py  test_ros2_graph_probe.py  test_ros_graph_assertions.py  test_shell_harness.py  test_status.py  test_urdf_validation.py  test_workflow_validation.py
test/core/: CMakeLists.txt  test_client_lifecycle.cpp  test_client_recovery.cpp  test_client_stream.cpp  test_discovery.cpp  test_fault_latch.cpp  test_posix_transport.cpp  test_protocol.cpp  test_sequence.cpp  test_status.cpp  test_types.cpp
test/core/support/: fake_http_server.cpp  fake_http_server.hpp  fake_sensor.cpp  fake_sensor.hpp
test/cpp/: CMakeLists.txt  netft_hardware_test_plugins.xml  test_adapter_config.cpp  test_check.cpp  test_client.cpp  test_diagnostics.cpp  test_hardware_interface.cpp  test_protocol.cpp  test_ros1_node.cpp  test_ros2_node.cpp  test_status.cpp  test_types.cpp  test_unit_conversion.cpp
test/cpp/support/: fake_sensor.cpp  fake_sensor.hpp  ros2_control_test_access.cpp
test/integration/: audit_ros2_control_symbols.sh  build_package.sh  fake_sensor_process.py  ros1_smoke.sh  ros1_smoke_harness_test.sh  ros2_control_cleanup_harness_test.sh  ros2_control_isolation_test.sh  ros2_control_smoke.sh  ros2_domain_lease.sh  ros2_domain_lease_harness_test.sh  ros2_graph_probe.py  ros2_smoke.sh  ros2_smoke_harness_test.sh  ros_graph_assertions.py  validate_junit.py
test/support/: fake_sensor.py
urdf/: netft.ros2_control.xacro
