<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>netft_driver</name>
  <version>0.1.0</version>
  <description>ROS 1 and ROS 2 driver for ATI Net F/T RDT sensors.</description>
  <maintainer email="hanxudong159@126.com">Xudong Han</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/han-xudong/ros-netft</url>
  <url type="repository">https://github.com/han-xudong/ros-netft</url>
  <url type="bugtracker">https://github.com/han-xudong/ros-netft/issues</url>
  <author email="hanxudong159@126.com">Xudong Han</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 2">ament_cmake_python</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roslaunch</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_index_python</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">launch</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_pytest</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
